# hallucheck

./: .gitignore  JULES_PROMPT.md  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
hallucheck/: cli.py  config.py  diff_parser.py  display.py  explainer.py  indexer.py  reference_extractor.py  suggester.py  validator.py
tests/: test_diff_parser.py  test_indexer.py  test_reference_extractor.py  test_validator.py
tests/fixtures/: sample_diff.patch
tests/fixtures/sample_codebase/auth/: models.py  types.py
tests/fixtures/sample_codebase/utils/: signing.py
